--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,7 +1,8 @@
 .buttonWrapper {
   display: flex;
   justify-content: center;
-  margin-top: 20px;
+  /* margin-top: 20px; */
+  padding: 20px 0 20px 0;
 }
 
 .button {
@@ -23,5 +24,5 @@
 }
 
 .buttonArrow {
-  size: 3rem;
+  /* size: 3rem; */
 }
