--- a/src/components/PreviewContainer2/PreviewContainer2.module.css
+++ b/src/components/PreviewContainer2/PreviewContainer2.module.css
@@ -1,6 +1,7 @@
 .wrapper {
   margin-bottom: 8vh;
   /* background-color: rgb(255, 0, 191); */
+  /* height: 80vh; */
 }
 
 .title {
@@ -13,9 +14,8 @@
 .wrapperContent {
   /* margin: 0 10px 10px 10px;
   padding: 16px; */
-  height: 80vh;
-  /* border-radius: 10px; */
+  /* height: calc(80vh - 48px); */
 
   margin: 0;
-  padding: 16px 26px 16px 26px;
+  /* padding: 16px 26px 16px 26px; */
 }
