--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,4 +1,51 @@
-.footer {
-  height: 80px;
-  background-color: brown;
+.footerWrapper {
+  /* height: 800px; */
+  position: relative;
+
+  overflow: hidden; /* Zapobiega wyświetlaniu się animacji poza footerem */
+  display: flex;
+  flex-direction: column;
+}
+
+.footerAdress {
+  height: 100px;
+  /* z-index: 1; */
+  position: relative;
+  color: var(--beige);
+  height: 150px;
+  font-size: 1.2rem;
+  margin: 30px 20px 60px 20px;
+  text-align: center;
+}
+
+.footerAdress p {
+  font-size: 2rem;
+  margin-bottom: 10px;
+  text-decoration: underline;
+  letter-spacing: 0.7rem;
+}
+
+.footerAdress a,
+.footerAdress address {
+  text-decoration: none;
+  color: var(--beige);
+  font-style: normal;
+  letter-spacing: 0.2rem;
+}
+
+.footerSocial {
+  padding: 30px 50px;
+  /* padding-left: 50px; */
+  border-top: 2px solid var(--beige);
+  border-bottom: 2px solid var(--beige);
+  /* position: relative; */
+}
+
+.footerCopyRights {
+  margin-top: 30px;
+  color: var(--beige);
+  text-align: center;
+  font-size: 0.75rem;
+  letter-spacing: 0.2rem;
+  margin-bottom: 50px;
 }
