--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,44 +1,26 @@
-.modalWrapper {
-  z-index: 2;
-  position: relative;
-}
-
-.modalBrg {
-  width: 100vw;
-  height: 100vh;
+.overlay {
+  width: 100%;
+  height: 100%;
+  background-color: rgb(0, 0, 0, 0.6);
+  opacity: 0;
+  transition: transform 1s ease-in-out, opacity 1s ease-in-out;
   position: fixed;
+  transform: translateY(0%);
+  z-index: 10;
   top: 0;
-  background-color: transparent;
-  font-size: 1.6rem;
-  margin-top: 76px;
 }
 
-.modalContainer {
-  margin-top: 2rem;
-  /* background-color: aquamarine; */
-  /* border-bottom: 3px solid; */
+.childrenWrapper {
+  width: 100%;
+  height: 100%;
 }
 
-.modalPages {
-  border-bottom: 3px solid;
-  color: var(--beige);
-  margin-bottom: 40px;
-  padding-left: 40px;
-  /* margin-left: 20px; */
-}
-
-.modalFooter {
-  margin: 0 40px 0 40px;
-}
-
-.hideModal {
-  transform: translateY(-100%);
-  transition: 2s;
-  background-color: brown;
-}
-
-.showModal {
+.show {
   transform: translateY(0);
-  transition: 2s;
-  background-color: blue;
+  opacity: 1;
+}
+
+.hide {
+  transform: translateY(-100%);
+  opacity: 0;
 }
