--- a/src/components/ModalPortal/ModalPortal.module.css
+++ b/src/components/ModalPortal/ModalPortal.module.css
@@ -5,6 +5,8 @@
   background-color: rgb(202, 102, 20);
   height: 100px;
   width: 100%;
+  z-index: 200;
+  position: relative;
 }
 
 .button {
@@ -37,4 +39,47 @@
 
 .childrenWrapper {
   width: 90vw;
+}
+
+.hideWrapper {
+  width: 100%;
+  height: 400px;
+  background-color: aquamarine;
+}
+
+.hideBox {
+  width: 100%;
+  height: 300px;
+  background-color: black;
+  color: white;
+  font-size: 3rem;
+  text-align: center;
+
+  opacity: 0;
+  transition: transform 1s ease-in-out, opacity 1s ease-in-out;
+  /* padding-top: 400px; */
+  position: relative;
+  /* position: fixed; */
+  transform: translateY(0%);
+
+  z-index: 2;
+}
+
+.hideButton {
+  background-color: blue;
+  color: white;
+  padding: 10px 20px;
+  cursor: pointer;
+  z-index: 100;
+  position: absolute;
+}
+
+.show {
+  transform: translateY(-100%);
+  opacity: 1;
+}
+
+.hide {
+  transform: translateY(0);
+  opacity: 0;
 }
