--- a/src/components/SharedLayout/SharedLayout.module.css
+++ b/src/components/SharedLayout/SharedLayout.module.css
@@ -10,7 +10,7 @@
   position: fixed;
   width: 100%;
   height: 56px;
-  z-index: 10;
+  z-index: 1000;
   top: 0;
   align-items: center;
 }
@@ -32,6 +32,12 @@
 
 .logo {
   margin-left: 10px;
+  /* width: 20px; */
+}
+
+.logo img {
+  width: 70px;
+  color: white;
 }
 
 .hamburger {
