optimization of loading prage

--- a/src/components/Footer/AnimatedBgr2/AnimatedBgr2.module.css
+++ b/src/components/Footer/AnimatedBgr2/AnimatedBgr2.module.css
@@ -25,6 +25,8 @@
   animation-duration: 18;
   animation-timing-function: linear;
   animation-iteration-count: infinite;
+
+  /* will-change: transform; */
 }
 
 .background span:nth-child(0) {
