--- a/src/pages/Artists/Artists.module.css
+++ b/src/pages/Artists/Artists.module.css
@@ -4,12 +4,15 @@
 }
 
 .photo {
-  width: 100%;
+  max-width: 100%;
   overflow: hidden;
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
   margin-bottom: 20px;
   max-height: 60vh;
+}
+.photo img {
+  max-width: 100%;
 }
 
 .artistText {
@@ -19,4 +22,5 @@
   overflow: hidden;
   text-overflow: ellipsis;
   padding: 0 20px;
+  width: inherit;
 }
