working on fullpages

--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@ body {
   --light-orange: rgb(240, 140, 103);
   --orange: rgb(199, 53, 0);
   --toastify-bgr-color: #d0fae2;
+  --skeleton-bgr: rgb(216, 211, 211);
 }
 
 h1,
