--- a/src/components/SplashScreen/SplashScreen.module.css
+++ b/src/components/SplashScreen/SplashScreen.module.css
@@ -52,23 +52,17 @@
   justify-content: center;
 }
 
+@keyframes pulse {
+  0%,
+  100% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(0.8);
+  }
+}
+
 .logo img {
   height: 40vh;
-}
-
-.loader {
-  /* background-color: rgb(240, 238, 238); */
-  /* background-color: black; */
-  /* width: 100%; */
-  /* height: 100px; */
-  /* align-items: self-end; */
-  /* height: 20px; */
-}
-
-.stub {
-  position: fixed;
-  top: 0;
-  z-index: 50;
-  width: 100%;
-  height: 100%;
+  animation: pulse 2s infinite ease-in-out;
 }
