--- a/src/pages/Gallery/Gallery.module.css
+++ b/src/pages/Gallery/Gallery.module.css
@@ -5,3 +5,47 @@
   height: calc(80vh - 148px);
   padding-top: 20px;
 }
+
+.wrapper {
+  background-color: var(--deep-green);
+  border-bottom: 2px solid beige;
+  padding-top: 90px;
+}
+
+.wrapperContent {
+  color: var(--beige);
+  margin: 0 10px 40px 10px;
+}
+
+.titleMain {
+  font-size: 2.5rem;
+  font-weight: 700;
+  text-shadow: 4px 4px 3px rgba(2, 2, 2, 1);
+  color: var(--beige);
+  padding-left: 10px;
+  border-radius: 20px;
+  margin-bottom: 10px;
+}
+
+.gridContainer {
+  display: grid;
+  grid-template-columns: 3fr 2fr 2fr;
+  grid-template-rows: 20vh;
+  /* grid-auto-rows: minmax() */
+
+  gap: 15px;
+}
+
+.imageContainer {
+  overflow: hidden;
+  /* height: 50px; */
+  /* width: 100%;
+  height: 100%; */
+}
+
+.imageContainer img {
+  object-fit: cover;
+
+  height: 100%;
+  width: 100%;
+}
