--- a/src/components/SwiperAutoSlide/SwiperAutoSlide.css
+++ b/src/components/SwiperAutoSlide/SwiperAutoSlide.css
@@ -14,8 +14,9 @@
 }
 
 .artist-swiper .swiper-slide img {
-  display: block;
+  /* display: block; */
   width: 100%;
-  height: 100%;
+  height: 50vh;
   object-fit: cover;
+  overflow: hidden;
 }
