--- a/src/pages/Artists/Artists.module.css
+++ b/src/pages/Artists/Artists.module.css
@@ -44,7 +44,7 @@
 .photo {
   overflow: hidden;
   height: 30vh;
-  background-color: aqua;
+  background-color: white;
   object-fit: cover;
   border-radius: 20px;
   position: relative;
@@ -56,8 +56,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   max-height: 100%;
-  width: auto;
-
+  width: 100%;
   object-fit: cover;
   object-position: center;
   display: block;
@@ -67,7 +66,6 @@
 .photo2 {
   overflow: hidden;
   height: 30vh;
-  background-color: aqua;
   object-fit: cover;
   border-radius: 20px;
 }
