--- a/src/pages/Gallery/Gallery.module.css
+++ b/src/pages/Gallery/Gallery.module.css
@@ -31,21 +31,19 @@
   display: grid;
   grid-template-columns: 3fr 2fr 2fr;
   grid-template-rows: 20vh;
-  /* grid-auto-rows: minmax() */
-
   gap: 15px;
 }
 
+/* .gridContainer div:nth-child(2n) {
+  grid-row: 2 / 3;
+} */
+
 .imageContainer {
   overflow: hidden;
-  /* height: 50px; */
-  /* width: 100%;
-  height: 100%; */
 }
 
 .imageContainer img {
   object-fit: cover;
-
   height: 100%;
   width: 100%;
 }
