--- a/src/components/PreviewContainer/PreviewContainer.module.css
+++ b/src/components/PreviewContainer/PreviewContainer.module.css
@@ -3,7 +3,7 @@
 }
 
 .title {
-  font-size: 2rem;
+  font-size: 2.5rem;
   font-weight: 700;
   text-align: center;
   margin-bottom: 16px;
@@ -15,4 +15,5 @@
   /* height: calc(80vh - 148px); */
   overflow: hidden;
   border-radius: 30px;
+  box-shadow: 11px 10px 23px -24px rgb(0, 0, 0);
 }
