--- a/src/components/PreviewContainer2/PreviewContainer2.module.css
+++ b/src/components/PreviewContainer2/PreviewContainer2.module.css
@@ -5,17 +5,13 @@
 }
 
 .title {
-  font-size: 2rem;
+  font-size: 2.5rem;
   font-weight: 700;
   text-align: center;
   margin-bottom: 16px;
 }
 
 .wrapperContent {
-  /* margin: 0 10px 10px 10px;
-  padding: 16px; */
-  /* height: calc(80vh - 48px); */
-
   margin: 0;
-  /* padding: 16px 26px 16px 26px; */
+  box-shadow: 11px 10px 23px -24px rgb(0, 0, 0);
 }
