--- a/src/pages/Contact/ContactPreview.module.css
+++ b/src/pages/Contact/ContactPreview.module.css
@@ -10,6 +10,7 @@
 .previewTitle {
   font-size: 1.5rem;
   text-align: center;
+  margin-bottom: 30px;
 }
 
 .previewText li {
@@ -18,24 +19,30 @@
   align-items: center;
 }
 
+.previewList {
+  /* background-color: aqua; */
+}
+
 .previewList li {
-  font-size: 1rem;
-  margin-left: 20px;
+  display: flex;
+  align-items: center;
+  font-size: 1.2rem;
   font-weight: 500;
+  height: 70px;
+  background-color: var(--light-green);
+  border-radius: 30px;
+  padding-left: 20px;
+  margin-bottom: 20px;
+}
+
+.previewList li p,
+.previewList li a {
+  margin-left: 10px;
+  text-decoration: none;
+  color: var(--beige);
 }
 
 .previewText2 {
   font-size: 1rem;
   font-weight: 700;
-}
-
-.previewSocial {
-  background-color: var(--deep-green);
-  /* height: 70px; */
-  /* display: flex;
-  align-items: center;
-  justify-content: space-between; */
-
-  padding: 10px 30px;
-  border-radius: 30px;
 }
