--- a/src/pages/FAQ/FAQ.module.css
+++ b/src/pages/FAQ/FAQ.module.css
@@ -2,3 +2,82 @@
   margin: 0 20px 0 20px;
   height: 70vh;
 }
+
+.wrapper {
+  background-color: var(--deep-green);
+  border-bottom: 2px solid beige;
+  padding-top: 90px;
+}
+
+.wrapperContent {
+  color: var(--beige);
+  margin: 0 auto;
+  padding: 20px;
+  max-width: 1200px;
+}
+
+.titleMain {
+  font-size: 2.5rem;
+  font-weight: 700;
+  text-shadow: 4px 4px 3px rgba(0, 0, 0, 0.5);
+  color: var(--beige);
+  margin-bottom: 20px;
+}
+
+.gridContainer {
+  display: grid;
+  grid-template-columns: 2fr 2fr;
+  gap: 20px;
+  padding: 20px 0;
+}
+
+.qaContainer {
+  background-color: var(--light-green);
+  border-radius: 10px;
+  padding: 10px;
+  height: 40vh;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+
+.qaContainer h3 {
+  margin-bottom: 5px;
+  font-size: 1.4rem;
+  white-space: normal;
+  overflow: visible;
+}
+
+.qaContainer p {
+  font-size: 1rem;
+  flex-grow: 1;
+  color: var(--beige);
+  overflow: hidden;
+}
+
+.modalContent {
+  margin-top: 60px;
+  padding: 10px;
+  height: 100%;
+  border-radius: 10px;
+}
+
+.btnWrapper {
+  display: flex;
+  justify-content: end;
+  width: 100%;
+}
+
+.swiperCloseBtn {
+  background-color: transparent;
+}
+
+.slide {
+  padding: 20px;
+  color: var(--beige);
+  background-color: var(--light-green);
+  border-radius: 10px;
+  height: 100%;
+}
