--- a/src/pages/FAQ/FAQ.module.css
+++ b/src/pages/FAQ/FAQ.module.css
@@ -58,7 +58,7 @@
 }
 
 .modalContent {
-  margin-top: 60px;
+  margin-top: 50px;
   padding: 10px;
   height: 100%;
   border-radius: 10px;
@@ -75,9 +75,9 @@
 }
 
 .slide {
-  padding: 20px;
+  padding: 10px;
   color: var(--beige);
   background-color: var(--light-green);
   border-radius: 10px;
-  height: 100%;
+  /* height: 100%; */
 }
