--- a/src/components/PreviewContainer/PreviewContainer.module.css
+++ b/src/components/PreviewContainer/PreviewContainer.module.css
@@ -4,9 +4,30 @@
 
 .title {
   font-size: 2.5rem;
-  font-weight: 700;
+  /* font-weight: 700; */
+
+  /* font-family: "Pacifico", cursive;
+  font-weight: 400;
+  font-style: normal; */
+
+  /* font-family: "Montserrat Alternates", sans-serif;
+  font-weight: 400;
+  font-style: normal; */
+
+  /* font-family: "Montserrat", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal; */
+
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+
   text-align: center;
   margin-bottom: 16px;
+  color: var(--beige);
+  text-shadow: 0px 0px 23px var(--light-green);
 }
 
 .wrapperContent {
@@ -15,5 +36,4 @@
   /* height: calc(80vh - 148px); */
   overflow: hidden;
   border-radius: 30px;
-  box-shadow: 11px 10px 23px -24px rgb(0, 0, 0);
 }
