--- a/src/components/PreviewContainer2/PreviewContainer2.module.css
+++ b/src/components/PreviewContainer2/PreviewContainer2.module.css
@@ -7,11 +7,14 @@
 .title {
   font-size: 2.5rem;
   font-weight: 700;
+  /* font-family: "Roboto"; */
   text-align: center;
   margin-bottom: 16px;
+  color: var(--beige);
+  /* color: var(--beige); */
 }
 
 .wrapperContent {
   margin: 0;
-  box-shadow: 11px 10px 23px -24px rgb(0, 0, 0);
+  box-shadow: 11px 10px 23px -24px rgb(251, 240, 240);
 }
