--- a/src/pages/Home/Hero.module.css
+++ b/src/pages/Home/Hero.module.css
@@ -17,12 +17,21 @@
   margin-block-start: 0;
   margin-block-end: 0;
   z-index: -1;
-  font-family: "Archivo";
-  color: var(--beige);
+  letter-spacing: 0.2em;
+  text-shadow: 0px 0px 10px rgb(39, 189, 12);
+
+  /* color: var(--beige); */
+  color: rgb(216, 241, 223);
+  /* color: rgb(214, 235, 207); */
   font-size: 14vw;
-  font-weight: 500;
-  letter-spacing: 0.3em;
-  text-shadow: 4px 4px 3px rgba(2, 2, 2, 1);
+
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+
+  /* font-weight: 500;
+  font-family: "Archivo"; */
 }
 
 .backgroundVideo {
