--- a/src/components/PreviewContainer/PreviewContainer.module.scss
+++ b/src/components/PreviewContainer/PreviewContainer.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/mixins.scss";
+
 .wrapper {
   margin: 0 10px 40px 10px;
 }
@@ -26,14 +28,25 @@
 
   text-align: center;
   margin-bottom: 16px;
-  color: var(--beige);
-  text-shadow: 0px 0px 23px var(--light-green);
+
+  /* color: var(--beige);
+  text-shadow: 0px 0px 10px rgb(39, 189, 12); */
+
+  /* color: rgb(110, 208, 125);
+  text-shadow: 0px 0px 10px rgba(50, 228, 1, 0.9); */
+
+  /* color: rgb(129, 206, 129);
+  text-shadow: 0px 0px 10px rgba(50, 228, 1, 0.9); */
+
+  /* color: rgb(49, 236, 25);
+  text-shadow: 0px 0px 10px rgba(230, 242, 92, 0.8); */
+
+  /* color: rgb(255, 91, 27);
+  text-shadow: 0px 0px 10px rgba(255, 248, 39, 0.9); */
+  @include neonEffect;
 }
 
 .wrapperContent {
-  /* margin: 0 10px 0 10px; */
-  /* padding-bottom: 20px; */
-  /* height: calc(80vh - 148px); */
   overflow: hidden;
   border-radius: 30px;
 }
