--- a/src/pages/Artists/Artists.module.css
+++ b/src/pages/Artists/Artists.module.css
@@ -20,25 +20,20 @@
 }
 
 .titleMain {
-  font-size: 2.5rem;
-  font-weight: 700;
-  text-shadow: 4px 4px 3px rgba(2, 2, 2, 1);
-  color: var(--beige);
   padding-left: 10px;
   border-radius: 20px;
   margin-bottom: 10px;
-}
 
-.title {
-  font-size: 2rem;
-  font-weight: 700;
-  text-shadow: 4px 4px 3px rgba(2, 2, 2, 1);
-  color: var(--beige);
-  padding-left: 10px;
-  border-radius: 20px;
-  margin-bottom: 10px;
-  display: flex;
-  align-items: center;
+  font-size: 2.5rem;
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+
+  color: rgb(193, 208, 176);
+  text-shadow: 0 0 5px var(--light-green), 0 0 10px var(--shadow-green),
+    0 0 20px var(--shadow-green), 0 0 40px var(--beige), 0 0 80px var(--beige),
+    0 0 90px var(--shadow-green), 0 0 100px var(--shadow-green);
 }
 
 .photo {
