--- a/src/pages/Home/Hero.module.css
+++ b/src/pages/Home/Hero.module.css
@@ -18,17 +18,28 @@
   margin-block-end: 0;
   z-index: -1;
   letter-spacing: 0.2em;
-  text-shadow: 0px 0px 10px rgb(39, 189, 12);
-
-  /* color: var(--beige); */
-  color: rgb(216, 241, 223);
-  /* color: rgb(214, 235, 207); */
   font-size: 14vw;
+  /* text-transform: uppercase; */
 
   font-family: "Nunito", sans-serif;
   font-optical-sizing: auto;
   font-weight: 600;
   font-style: normal;
+
+  /* color: var(--beige);
+  text-shadow: 0px 0px 10px rgb(39, 189, 12); */
+
+  /* color: rgb(110, 208, 125);
+  text-shadow: 0px 0px 10px rgba(50, 228, 1, 0.9); */
+
+  /* color: rgb(129, 206, 129);
+  text-shadow: 0px 0px 10px rgba(50, 228, 1, 0.9); */
+
+  color: rgb(193, 208, 176);
+  text-shadow: 0px 0px 10px rgba(50, 228, 1, 0.9);
+
+  /* color: rgb(49, 236, 25);
+  text-shadow: 0px 0px 10px rgba(230, 242, 92, 0.8); */
 
   /* font-weight: 500;
   font-family: "Archivo"; */
