--- a/src/styles/mixins.scss
+++ b/src/styles/mixins.scss
@@ -1,4 +1,9 @@
 @mixin neonEffect {
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+
   color: rgb(193, 208, 176);
   text-shadow: 0 0 5px var(--light-green), 0 0 10px var(--shadow-green),
     0 0 20px var(--shadow-green), 0 0 40px var(--beige), 0 0 80px var(--beige),
