--- a/src/pages/Artists/Artists.module.scss
+++ b/src/pages/Artists/Artists.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/mixins.scss";
+
 .wrapper {
   background-color: var(--deep-green);
   border-bottom: 2px solid beige;
@@ -20,20 +22,11 @@
 }
 
 .titleMain {
-  padding-left: 10px;
+  margin-left: 20px;
   border-radius: 20px;
   margin-bottom: 10px;
-
   font-size: 2.5rem;
-  font-family: "Nunito", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 600;
-  font-style: normal;
-
-  color: rgb(193, 208, 176);
-  text-shadow: 0 0 5px var(--light-green), 0 0 10px var(--shadow-green),
-    0 0 20px var(--shadow-green), 0 0 40px var(--beige), 0 0 80px var(--beige),
-    0 0 90px var(--shadow-green), 0 0 100px var(--shadow-green);
+  @include neonEffect;
 }
 
 .photo {
