--- a/src/pages/FAQ/FAQ.module.scss
+++ b/src/pages/FAQ/FAQ.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/mixins.scss";
+
 .faqWrapper {
   margin: 0 20px 0 20px;
   height: 70vh;
@@ -18,10 +20,9 @@
 
 .titleMain {
   font-size: 2.5rem;
-  font-weight: 700;
-  text-shadow: 4px 4px 3px rgba(0, 0, 0, 0.5);
-  color: var(--beige);
-  margin-bottom: 20px;
+  margin-left: 20px;
+  margin-bottom: 10px;
+  @include neonEffect;
 }
 
 .gridContainer {
