--- a/src/pages/Gallery/Gallery.module.scss
+++ b/src/pages/Gallery/Gallery.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/mixins.scss";
+
 .galleryBgr {
   /* background-color: bisque; */
   background-color: transparent;
@@ -19,12 +21,9 @@
 
 .titleMain {
   font-size: 2.5rem;
-  font-weight: 700;
-  text-shadow: 4px 4px 3px rgba(2, 2, 2, 1);
-  color: var(--beige);
-  padding-left: 10px;
-  border-radius: 20px;
+  margin-left: 20px;
   margin-bottom: 10px;
+  @include neonEffect;
 }
 
 .gridContainer {
