added width limitations

--- a/src/components/PreviewContainer2/PreviewContainer2.module.scss
+++ b/src/components/PreviewContainer2/PreviewContainer2.module.scss
@@ -1,8 +1,7 @@
 @import "../../styles/mixins.scss";
 
 .wrapper {
-  margin-bottom: 8vh;
-  /* margin-top: 2vh; */
+  margin-top: 50px;
   /* background-color: rgb(255, 0, 191); */
   /* height: 80vh; */
 }
