--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: column;
   max-width: 100%;
+  margin-top: 50px;
 }
 
 .footerAdress {
@@ -18,7 +19,7 @@
 }
 
 .footerAdress p {
-  font-size: 2rem;
+  font-size: 1.75rem;
   margin-bottom: 10px;
   text-decoration: underline;
   letter-spacing: 0.7rem;
@@ -29,7 +30,8 @@
   text-decoration: none;
   color: var(--beige);
   font-style: normal;
-  letter-spacing: 0.2rem;
+  letter-spacing: 0.1rem;
+  font-size: 1rem;
 }
 
 .footerSocial {
