--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -1,5 +1,6 @@
 .overlay {
   width: 100%;
+
   height: 100%;
   background-color: rgb(0, 0, 0, 0.6);
   opacity: 0;
@@ -8,11 +9,17 @@
   transform: translateY(0%);
   z-index: 10;
   top: 0;
+  left: 0;
 }
 
 .childrenWrapper {
-  width: 100%;
+  /* width: 100%; */
   height: 100%;
+
+  max-width: 550px;
+  margin: 0 auto;
+  transform: translateY(0%);
+  background: white;
 }
 
 .show {
