--- a/src/components/SharedLayout/SharedLayout.module.css
+++ b/src/components/SharedLayout/SharedLayout.module.css
@@ -1,6 +1,7 @@
-/* .wrapper {
-  width: 100%;
-} */
+.wrapper {
+  max-width: 550px;
+  margin: 0 auto;
+}
 
 .navBar {
   display: flex;
@@ -13,6 +14,7 @@
   z-index: 100;
   top: 0;
   align-items: center;
+  max-width: 550px;
 }
 
 .hide {
