--- a/src/pages/Home/Hero.module.css
+++ b/src/pages/Home/Hero.module.css
@@ -1,15 +1,15 @@
 .wrapper {
-  /* background-color: grey; */
   max-width: 100%;
   height: 80vh;
   margin-block-start: 0;
   margin-block-end: 0;
-  margin: 0;
-  padding: 0;
   margin-bottom: 40px;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+
+  margin: 0;
+  padding: 0;
 }
 
 .title {
@@ -18,8 +18,7 @@
   margin-block-end: 0;
   z-index: -1;
   letter-spacing: 0.2em;
-  font-size: 14vw;
-
+  font-size: clamp(1rem, 14vw, 5rem);
   font-family: "Nunito", sans-serif;
   font-optical-sizing: auto;
   font-weight: 600;
@@ -27,15 +26,19 @@
 
   color: rgb(193, 208, 176);
   text-shadow: 0px 0px 10px rgba(50, 228, 1, 0.9);
+  margin: 0 auto;
 }
 
 .backgroundVideo {
   height: inherit;
   width: 100vw;
+  max-width: 550px;
   object-fit: cover;
   position: absolute;
   top: 0;
-  left: 0;
+  left: 50%;
+  transform: translateX(-50%);
   z-index: -2;
   overflow: hidden;
+  margin: 0 auto;
 }
