--- a/src/pages/NotFound/NotFound.module.css
+++ b/src/pages/NotFound/NotFound.module.css
@@ -1,5 +1,34 @@
 .wrapper {
-  font-size: 3rem;
   font-weight: 700;
-  margin-top: 100px;
+  margin-top: 120px;
+  margin-bottom: 80px;
+  color: var(--beige);
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+}
+
+.title {
+  font-size: 4.5rem;
+}
+
+.status {
+  font-size: 7rem;
+}
+
+.info {
+  font-size: 1.5rem;
+  text-align: center;
+}
+
+@media screen and (min-width: 550px) {
+  .content {
+    width: 550px;
+    margin: 0, auto;
+  }
 }
