--- a/src/pages/Studio/Studio.module.scss
+++ b/src/pages/Studio/Studio.module.scss
@@ -67,8 +67,7 @@
 
 .title {
   font-size: 2rem;
-  font-weight: 500;
-  text-shadow: 4px 4px 3px rgba(2, 2, 2, 1);
-  color: var(--beige);
+  font-size: 2.5rem;
   margin: 0 20px 20px 20px;
+  @include neonEffect;
 }
